# python-template-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE-NOTES.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/actions/ci/frontend/: action.yml
.github/actions/docker-check-containers/: action.yml
.github/actions/docker/build-start-services/: action.yml
.github/actions/docker/check-containers/: action.yml
.github/actions/docker/check-repo-name/: action.yml
.github/actions/docker/check-tag/: action.yml
.github/actions/docker/generate-release-notes/: action.yml
.github/actions/docker/get-version/: action.yml
.github/actions/docker/prepare-release/: action.yml
.github/actions/docker/show-logs/: action.yml
.github/actions/docker/stop-services/: action.yml
.github/actions/setup-python-core/: action.yml
.github/actions/setup/check-frontend-exists/: action.yml
.github/actions/setup/setup-node/: action.yml
.github/workflows/: build.yml  ci.yml  docker.yml
configuration/: config.json
docs/: API.md  DOCKER_DEPLOYMENT.md  RELEASE-NOTES.md  SMG.md  TEMPLATE_SERVER_PACKAGE_NOTES.md  WORKFLOWS.md
docs/source/: index.rst  server.rst  smg.rst  workflows.rst
grafana/: README.md
grafana/dashboards/: authentication-metrics.json  health-metrics.json  rate-limiting-metrics.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
python_template_server/: __init__.py  authentication_handler.py  certificate_handler.py  config.py  constants.py  logging_setup.py  main.py  models.py  prometheus_handler.py  template_server.py
python_template_server/db/: __init__.py  base_database_manager.py
python_template_server/middleware/: __init__.py  request_logging_middleware.py  security_headers_middleware.py
python_template_server/routers/: __init__.py  base_router.py  template_server_router.py
release/: install_template_server.sh
tests/: conftest.py  test_authentication_handler.py  test_certificate_handler.py  test_config.py  test_logging_setup.py  test_main.py  test_models.py  test_prometheus_handler.py  test_template_server.py
tests/db/: test_base_database_manager.py
tests/middleware/: conftest.py  test_request_logging_middleware.py  test_security_headers_middleware.py
tests/routers/: test_base_router.py  test_template_server_router.py
