[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-template-server"
version = "0.1.3"
description = "A template FastAPI server with production-ready configuration."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Javid Ahmed", email = "javidahmed@icloud.com" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "template-python @ git+https://github.com/javidahmed64592/template-python.git",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=1.4.0",
    "pytest-env>=1.6.0",
    "template-python[dev] @ git+https://github.com/javidahmed64592/template-python.git",
]
docs = [
    "itsdangerous>=2.2.0",
    "template-python[docs] @ git+https://github.com/javidahmed64592/template-python.git",
]

[project.urls]
repository = "https://github.com/javidahmed64592/python-template-server"
documentation = "https://javidahmed64592.github.io/python-template-server"

[project.scripts]
python-template-server = "python_template_server.main:run"
generate-new-token = "python_template_server.authentication_handler:generate_new_token"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "python_template_server/**",
  ".here",
]

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--cov",
    "--cov-report",
    "term-missing",
]
env = [
    "API_TOKEN_HASH=token",
]

[tool.coverage.run]
branch = true
source = ["python_template_server", "tests"]

[tool.coverage.report]
fail_under = 80
skip_covered = false
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

extend-exclude = [
    "**/__init__.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "F",
    "FBT",
    "G",
    "I",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PL",
    "PT",
    "RET",
    "RUF",
    "S",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D203",
    "D213",
    "PLR0913",
    "S101"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
